--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 	},
 	"dependencies": {
 		"@sveltejs/adapter-node": "^5.2.9",
+		"@sveltejs/adapter-vercel": "^5.5.2",
 		"bootstrap": "^5.3.3",
 		"tmi.js": "^1.8.5"
 	}
