--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 		"@sveltejs/adapter-node": "^5.2.9",
 		"@sveltejs/adapter-vercel": "^5.5.2",
 		"bootstrap": "^5.3.3",
+		"node-fetch": "^3.3.2",
 		"tmi.js": "^1.8.5"
 	}
 }
